--- a/style.css
+++ b/style.css
@@ -55,3 +55,9 @@ hr{
     margin: 5rem auto;
     max-width: 1200px;
 }
+
+.arrow{
+    position: absolute;
+    transform: translateX(-5.5rem)translateY(1.5rem);
+}
+
