--- a/style.css
+++ b/style.css
@@ -82,3 +82,25 @@ hr{
     gap: 1rem;
     margin-top: 1.5rem;
 }
+
+.hireMe{
+    background-color: #00adb5;
+    color: #eeeeee;
+    border-radius: 24px;
+    text-decoration: none;
+    padding: 0.5rem 1.5rem;
+    text-shadow: 0px 4px 4px rgb(0, 0, 0, 0.5);
+}
+
+.cv{
+    background-color: rgb(57, 62, 70, 0.75);
+    color: #eeeeee;
+    border-radius: 24px;
+    text-decoration: none;
+    padding: 0.5rem 1.5rem;
+    text-shadow: 0px 4px 4px rgb(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    backdrop-filter: blur(4px);
+}
