--- a/style.css
+++ b/style.css
@@ -137,4 +137,14 @@ hr{
 .aboutMePar{
     text-align: justify;
     color: #eeeeee;
+}    
+
+.works{
+    background-image: url("assets/svg/background.svg");
+    padding: 10rem 10rem;
+    margin: 5rem 0rem;
+}
+
+.worksContainer{
+    display: flex;
 }
